# ZimRadar

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  ZimRadar.md  docker-compose.yml  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py
src/agents/: analysis.py  graph.py  ingest.py  llm.py  prompts.py  report.py  report_agent.py  state.py  tools.py  validator.py
src/api/: admin.py  main.py
src/dashboard/: app.py  codebase_graph.py
src/ingestion/: base.py  elevation.py  fema.py  fema_nri.py  geo_admin.py  noaa.py  noaa_counties.py  noaa_storm_events.py  osm.py  osm_counties.py  sentinel2.py  state_regions.py
src/pipeline/: classifier.py  classify_flow.py  depth.py  forecasting.py  preprocessing.py  report_flow.py  segment_flow.py  segmentation.py  train_flow.py
src/rag/: chunking.py  embed.py  retriever.py
src/storage/: cache.py  db.py  models.py  s3.py
tests/: conftest.py  test_config.py
tests/agents/: test_analysis.py  test_graph.py  test_ingest.py  test_llm.py  test_report.py  test_state.py  test_validator.py
tests/api/: test_admin.py  test_main.py
tests/evals/: test_forecast_eval.py  test_segmentation_eval.py  test_tabular_eval.py
tests/fixtures/: noaa_holdout.csv  xgboost_labels.json
tests/ingestion/: test_base.py  test_fema.py  test_noaa.py  test_osm.py  test_sentinel2.py
tests/pipeline/: conftest.py  test_classifier.py  test_depth.py  test_forecasting.py  test_preprocessing.py  test_segmentation.py
tests/rag/: test_chunking.py  test_embed.py  test_retriever.py
tests/storage/: test_cache.py  (+2 more)
(+16 files in other folders)
