[project]
name = "zimradar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "prefect>=3.0",
  "sentinelsat>=1.2",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "numpy>=1.26",
  "torch>=2.2",
  "transformers>=4.40",
  "sentence-transformers>=3.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "redis>=5.0",
  "boto3>=1.34",
  "streamlit>=1.35",
  "leafmap>=0.30",
  "llama-index>=0.10",
  "llama-index-vector-stores-postgres>=0.1",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "pillow>=10.0",
  "xgboost>=2.0",
  "chronos-forecasting>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "moto[s3]>=5.0",
  "factory-boy>=3.3",
  "ruff>=0.4",
  "fakeredis>=2.0",
]
eval = [
  "datasets>=2.0",
  "torchgeo>=0.5",
  "scikit-learn>=1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "slow: marks eval tests that take >30s (deselect with '-m not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
